# whisper

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  parameters.rs  ui.html  util.rs
