[package]
name = "whisper"
version = "0.1.0"
authors = ["Rein van der Woerd <reinvanderwoerd@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = { path = "../vst-rs" }
vst-gui = { path = "../rust-vst-gui" }
rand = "0.3"
lerp = "0.2.0"
noise = "0.6.0"
lazy_static = "1.4.0"

[lib]
name = "whisper"
crate-type = ["cdylib"]
