[package]
name = "whisper"
version = "0.1.0"
authors = ["Rein van der Woerd <reinvanderwoerd@me.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.3.0"
rand = "0.8.5"
lerp = "0.4.0"
noise = "0.7.0"
lazy_static = "1.4.0"

[lib]
name = "whisper"
crate-type = ["cdylib"]
